--- a/src/styles/categories.css
+++ b/src/styles/categories.css
@@ -29,5 +29,12 @@
       grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     }
   }
+
+  @media (max-width: 767px) {
+    .cardcontainer {
+      gap: 2rem 1rem;
+      grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+    }
+  }
   
  
