--- a/src/App.css
+++ b/src/App.css
@@ -32,3 +32,43 @@
     background: url('./assets/Restaurentmenu.png');
 }  
 
+
+
+
+.nearby input:focus{
+  background-color: yellow;
+}
+.nearby input:hover{
+  background-color: yellow;
+}
+
+
+
+/*swiperbutton*/
+
+.swiper-button-next::after ,.swiper-button-prev::after{
+  font-size: 21px !important;
+}
+
+.swiper-button-next,.swiper-button-prev{
+  border-radius: 50%;
+  border: 0.2px solid #F1F1F1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/*card*/
+
+.card img[data-testid="flowbite-card-image"] {
+  border-radius: 20px !important;
+}
+
+
+
+
+
+
+
+
+
