--- a/src/styles/DropdownStyle.css
+++ b/src/styles/DropdownStyle.css
@@ -3,3 +3,51 @@
  display: flex;
  align-items: center;
 }
+
+
+/*Tabmobile*/
+
+.tabmob button {
+    /* Styles for all buttons */
+    padding: 8px 16px;
+    border: 1px solid #ccc;
+    background-color: #f5f5f5;
+    cursor: pointer;
+    height: 30px;
+    border-radius: 43px;
+  }
+  
+  .tabmob button[aria-selected="true"] {
+   
+    background-color: #FFD814;
+    color: black;
+    border: none;
+  }
+  
+  .tabmob button[aria-selected="false"] {
+    /* Styles for non-active button */
+    background-color: white;
+    color: #333;
+  }
+
+
+
+  .sort-drop button {
+        width: 100%;
+        height: 43px;
+        background-color: #F1F1F1;
+        color: black;
+
+        span{
+            width: 100%;
+            justify-content: space-between;
+            color: #6D6D6D;
+        }
+  }
+
+  .sort-drop button:focus {
+    background-color: #EECA15 !important;
+  }
+  .sort-drop button:hover {
+    background-color: #EECA15 !important;
+  }
