--- a/src/App.css
+++ b/src/App.css
@@ -2,8 +2,8 @@
   --tw-ring-color: rgb(0 0 0 / 0) !important;
 }
 
-.flowbite-accordion:focus {
-  outline: none; /* Remove default focus effect */
+button{
+  outline: none;
 }
 .css-1kbanwn-MuiPaper-root-MuiAccordion-root.Mui-expanded,
 .css-1sux7e6-MuiPaper-root-MuiAccordion-root.Mui-expanded {
@@ -253,4 +253,81 @@ font-size: clamp(10px, 3vw, 20px);
   .contentsdic{
     padding-bottom: 50px !important;
   }
+
+  .iconnav{
+    height: 22px;
+    width: 25px;
+    margin-right: 10px;
+  }
+
+  .info-ul li{
+    padding: 0.6rem 0rem;
+    
+  }
+
+  .modal-info div[tabindex="0"]{
+    width: 450px !important;
+    height: 50% !important;
+  }
+
+  .modallol{
+    width: 100%  !important;
+  }
+
+
+  .modallol div[tabindex="-1"]{
+    max-width: 90% !important;
+    height: 90%;
+    display: flex;
+    align-items: end;
+    justify-content: center;
+
+    div{
+      background-color: transparent;
+      width: 100%;
+    }
+  }
+
+  .modallol .Flyercomps{
+    overflow: visible !important;
+    width: 95%;
+    padding: 0rem !important;
+  }
+
+  div [tabindex="0"]{
+    outline: none !important;
+  }
+
+
+  .modalregion div[tabindex="0"]{
+    min-width: 280px;
+    width: 80%;
+    height: 50%;
+  }
+
+.drp button[aria-expanded="false"]{
+    background-color: red;
+    padding: 0px 10px;
+    outline: none;
+    border: none;
+    background-color: #F5F3F3;
+}
+
+
+.modal-contentcopy div[tabindex="-1"]{
+  max-width: 80% !important;
+  
+
+  div{
+    background-color: transparent;
+   
+  }
+  
+}
+
+.modal-contentcopy{
+  display: flex !important; 
+  align-items: end !important;
+  margin-bottom: 20px !important;
+}
 
