--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,16 @@
 * {
   --tw-ring-color: rgb(0 0 0 / 0) !important;
 }
+
 /* CSS Reset */
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+input[type="password"]::-ms-reveal,
+input[type="password"]::-ms-clear {
+  display: none;
 }
 
 html, body {
@@ -316,6 +321,14 @@ font-size: clamp(10px, 3vw, 20px);
     height: 50%;
   }
 
+  @media (max-width: 600px) {
+.modal-contentcopy div[tabindex="-1"] {
+    
+      max-width: 100% !important;
+      
+    }
+  }
+
 .drp button[aria-expanded="false"]{
     background-color: red;
     padding: 0px 10px;
@@ -326,11 +339,12 @@ font-size: clamp(10px, 3vw, 20px);
 
 
 .modal-contentcopy div[tabindex="-1"]{
-  max-width: 80% !important;
+  max-width: 80% ;
   
 
   div{
     background-color: transparent;
+    box-shadow: none;
    
   }
   
@@ -383,4 +397,17 @@ font-size: clamp(10px, 3vw, 20px);
 .branchsingle span {
   position: relative;
   z-index: 2; /* Ensure text is above the background */
+}
+
+
+.card div[data-testid="flowbite-card"]{
+  box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px !important; 
+}
+
+
+.passtext div input{
+  border: none !important;
+  background-color: #F1F1F1;
+  padding: 8px 12px !important;
+  font-size: 13px !important;
 }
