--- a/src/App.css
+++ b/src/App.css
@@ -438,3 +438,15 @@ font-size: clamp(10px, 3vw, 20px);
     align-items: center;
   }
 }
+
+@media (max-width: 1100px) {
+.search{
+  width: 250px !important;
+}
+}
+
+@media (max-width: 800px) {
+  .search{
+    width: 80% !important;
+  }
+  }
