--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,13 @@
   --tw-ring-color: rgb(0 0 0 / 0) !important;
 }
 
+body{
+  zoom:0.8
+}
+div[id="root"]{
+  height: 100%;
+}
+
 
 /* CSS Reset */
 * {
@@ -450,4 +457,24 @@ font-size: clamp(10px, 3vw, 20px);
   .search{
     width: 80% !important;
   }
+  }
+
+
+  .formtext{
+    margin-bottom: 0rem !important;
+  }
+
+
+  
+
+  .flowbite-textinput-input:focus, .flowbite-textinput-input:hover
+  .flowbite-dropdown:focus,
+  .flowbite-dropdown button:focus {
+    outline: none !important;
+    box-shadow: none !important;
+    border: none !important;
+  }
+  .form-textarea{
+background-color: transparent !important;
+border: 1px solid black !important;
   }
