--- a/src/ShopsAdmin/Pages/Restuarent/Baselayout.css
+++ b/src/ShopsAdmin/Pages/Restuarent/Baselayout.css
@@ -84,7 +84,7 @@
   .form-input input{
     background-color: transparent;
     border: 1px solid black;
-    padding: 4px 12px !important;
+    padding: 8px 12px !important;
     font-size: 13px !important;
     border-radius: 4px;
   }
@@ -97,7 +97,7 @@
 
   .passtextadmin input{
     background-color: transparent !important;
-    padding: 4px 12px !important;
+    padding: 8px 12px !important;
     font-size: 13px !important;
     border: none;
   }
@@ -110,6 +110,7 @@
 
   .labelstyle{
     font-weight: 600 !important;
+    font-size: 20px !;
   }
   .orgdrop{
     width: 100%;
