--- a/src/ShopsAdmin/Modal/Modalsprofile.css
+++ b/src/ShopsAdmin/Modal/Modalsprofile.css
@@ -18,11 +18,10 @@
     width: 100px;
     height: 100px;
     border-radius: 50%;
-    background-image: url('../Assets/restdashbg.png');
     background-size: cover;
     background-repeat: no-repeat;
     position: absolute;
-    bottom: -50px;
+    bottom: -150px;
     left: 50%;
     transform: translateX(-50%);
 }
@@ -46,14 +45,14 @@
     width: 80%;
     margin: 0 auto;
     button{
-        padding: 0.5rem 0.5rem;
+        padding: 12px 32px;
         border-radius: 8px;
     }
 }
 
 .lgout{
     border: 2px solid black;
-    padding: 0.5rem 2rem !important;
+    padding: 12px 32px !important;
     -webkit-box-shadow: 4px 7px 12px -3px rgba(255,216,20,1);
 -moz-box-shadow: 4px 7px 12px -3px rgba(255,216,20,1);
 box-shadow: 4px 7px 12px -3px rgba(255,216,20,1);
@@ -130,3 +129,4 @@ border: 1px solid black;
 
     }
   }
+
