--- a/src/styles/Cards.css
+++ b/src/styles/Cards.css
@@ -147,6 +147,12 @@
 
 }
 
+.cardfl img[alt="Meaningful alt text for an image that is not purely decorative"] {
+  height: 360px; /* Adjust this value as needed */
+  object-fit: cover;
+}
+
+
 @media (max-width: 1100px) {
   .cardcontainer-resto{
       
