--- a/src/App.css
+++ b/src/App.css
@@ -676,3 +676,22 @@ img{
     }
   }
 }
+
+@keyframes shimmer {
+  0% {
+    background-position: -1000px 0;
+  }
+  100% {
+    background-position: 1000px 0;
+  }
+}
+
+.feed{
+  background-color: red !important;
+}
+
+
+
+.buttonss span svg{
+  color: teal;
+}
